--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/formidable": "^3.4.0",
     "@types/node": "^18",
-    "nuxt": "^3.6.1"
+    "nuxt": "^3.6.1",
+    "@types/jsonwebtoken": "^9.0.2"
   },
   "dependencies": {
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "prisma": "^4.16.2",
+    "@prisma/client": "^4.16.2",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "formidable": "^3.5.0",
+    "jsonwebtoken": "^9.0.1",
+    "url-pattern": "^1.0.3",
+    "zod": "^3.21.4"
   }
 }
